<resources>
    <string name="app_name">equis</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_gallery">Clases Grupales</string>
    <string name="menu_slideshow">Suplementos</string>
    <string name="menu_accesorios">Accesorios</string>
    <string name="title_activity_perfikl">PerfiklActivity</string>
</resources>