<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/perfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/trotar"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/suero"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_accesorio"
            android:icon="@drawable/accesorio"
            android:title="@string/menu_accesorios"/>
    </group>
</menu>